Bug 476176. Avoid potential deadlock warnings by not calling 'Available' on the media stream when checking whether to exit buffering; instead we can use our internal position counters. r=doublec

--HG--
extra : rebase_source : 51901db1ddca66b658d04d8c24769590a8faa7f7